site overflow "solve"

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 html, body{
     height: 100%;
+    overflow: hidden;
 }
 
 body{
